# oj-collection

./: .gitignore  CMakeLists.txt  README.md
上课/10月11日/: 1064 - 求出N以内的全部素数，并按每行五个数显示.cpp  1139 - 孪生素数.cpp  1143 - 纯粹合数.cpp  1150 - 求完全数的个数.cpp  1151 - 桐桐数.cpp  1223 - 汉诺塔的移动次数.cpp  1274 - 求各个科目成绩的平均分.cpp  1335 - 土地分割.cpp  1407 - 图像相似度.cpp  1496 - 地雷数量求解.cpp  1859 - 完数判断.cpp  1862 - 友好数.cpp  P 汉诺塔问题.cpp  test.cpp
上课/10月15日/: 1098 - 判断是否构成回文.cpp  1312 - 看完动漫要几天？.cpp  1327 - 鲜花方阵.cpp  1475 - 字符串对比.cpp  1480 - 找字典码最小的字符串.cpp  1997 - 孤独的素数.cpp  1997 - 孤独的素数（修改）.cpp
上课/10月19日/: 1209 - 回形方阵.cpp  1222 - 经典递归问题——汉诺塔.cpp  1224 - 过河卒.cpp  1368 - 蜜蜂路线.cpp  1368 - 蜜蜂路线.py  1514 - 数根.cpp  1562 - 加数.cpp
洛谷/题库/: P1150 Peter 的烟.cpp  P1151 子数整数.cpp  P1161 开灯.cpp  P1179 [NOIP2010 普及组] 数字统计.cpp  P1200 [USACO1-1] 你的飞碟在这儿 Your Ride Is Here.cpp  P1317 低洼地.cpp  P1319 压缩技术.cpp  P1320 压缩技术（续集版）.cpp  P1401 [入门赛 #18] 禁止在 int 乘 int 时不开 long long.cpp  P1426 小鱼会有危险吗.cpp  P1482 Cantor表（升级版）.cpp  P1534 不高兴的津津（升级版）.cpp  P1548 [NOIP1997 普及组] 棋盘问题.cpp
程序设计竞赛/23级-程序设计综合训练I-练习1/: A 第m小序列.cpp  B 简单计算器.cpp  B 简单计算器.py  B 简单计算器（复杂版）.cpp  C 字符串反转.cpp  D 士兵队列训练问题.cpp  E ACboy needs your help again!.cpp  F 排列2.cpp  G 看病要排队.cpp  H 产生冠军.cpp  I 购物.cpp  J 圆桌问题.cpp  T1 foreach.cpp
程序设计竞赛/23级-程序设计综合训练I-练习2/: A 红色和黑色.cpp  B 水壶.cpp  C 抓住那头牛.cpp  D 主要路径.cpp  E Solitaire.cpp  E.cpp  I Eight Ⅱ.cpp  T.cpp
程序设计竞赛/《程序设计竞赛》课程20240918作业/: A 大数运算.cpp  B 相似的数.cpp  C 整数分解.cpp  D 搭建支架.cpp  E 书架的空格.cpp
程序设计竞赛/《程序设计竞赛》课程20240925作业/: A 凑钱.cpp  B 序列比较.cpp  B.cpp  C 最小代价.cpp  D 分组.cpp  E 城门.cpp  F 跳跃的蚱蜢.cpp  G 回文数.cpp  G 回文数.py  (+1 more)
(+133 files in other folders)
