cmake_minimum_required(VERSION 3.26)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ main.cpp)

add_executable(main main.cpp)
add_executable(P1428 小鱼比可爱 "洛谷/站内题单/【入门4】数组/P1428 小鱼比可爱.cpp")
add_executable(P1427 小鱼的数字游戏 "洛谷/站内题单/【入门4】数组/P1427 小鱼的数字游戏.cpp")
add_executable(P5727 【深基5.例3】冰雹猜想 "洛谷/站内题单/【入门4】数组/P5727 【深基5-例3】冰雹猜想.cpp")
add_executable(CMakeLists CMakeLists.txt)
add_executable(P5727 [深基5.例3]冰雹猜想 "洛谷/站内题单/【入门4】数组/P5727 【深基5-例3】冰雹猜想.cpp")
add_executable(P5728 【深基5-例5】旗鼓相当的对手 "洛谷/站内题单/【入门4】数组/P5728 【深基5-例5】旗鼓相当的对手.cpp")
add_executable( .gitignore)
add_executable(README README.md)